icon alignment fix

--- a/src/app/video-playlist/video-playlist.component.css
+++ b/src/app/video-playlist/video-playlist.component.css
@@ -50,15 +50,8 @@
     align-items: center;
 }
 
-.fa-left {
-    padding: 3px 4px 3px 6px;
-}
 .fa-chevron-left:before {
     font-size: 14px;
-}
-
-.fa-right {
-    padding: 3px 4px 3px 8px;
 }
 
 .fa-chevron-right:before {
@@ -84,6 +77,9 @@
     color: white;
     border-radius: 50%;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .icon-wrapper:hover {
